﻿v1.7
- Fixed a copy/paste typo which caused the `RegisterBiquadResonantFilter`, `RegisterEchoFilter` and `RegisterReverbFilter` methods in `MonoSoundManager` to mention the wrong methods
- Updated the `StreamPackage` class:
  - Fixed a bug where looping would fail due to null reference errors
  - Added `double GetSecondDuration(long)`, `long ModifyResetOffset(long)`, `void SetStreamPosition(double)` and `void OnLooping()`
  - Added the `TimeSpan CurrentDuration` and `TimeSpan MaxDuration` properties
  - `override void ChildDispose(bool)` is now obsolete.  Use `override void Dispose(bool)` instead
  - The `int ReadBytes` property was changed to `long ReadBytes`
  - The `int TotalBytes` property was changed to `long TotalBytes`
  - The `ReadBytes` and `SecondsRead` properties now expose their setters to child classes
  - The `endOfStream` parameter from `void ReadSamples(double, out byte[], out int, out bool)` has been renamed to `checkLooping`
- The `CustomFileFormat` type and its API is now obsolete.  Use the `CustomAudioFormat` type instead
  - `MonoSoundLibrary.RegisterFormat(string, Func<Stream, FormatWav>, Func<Stream, StreamPackage>)` is now obsolete.  Use `MonoSoundLibrary.RegisterFormat(CustomAudioFormat)` instead
- `vorbisStream` and `vorbisReadStart` in `OggStream` are now visible to child classes
- `Filter` now contains a `bool RequiresSampleMemory` property which is used to prevent the filter from being used by certain APIs

v1.6.2
- Replaced all usage of File.OpenRead() with TitleContainer.OpenStream(), since the former prevented MonoSound from loading on Android projects

v1.6.1
- Fixed an issue where filters on a streamed sound would have noise

v1.6.0.0
- Modified the API to be more user-friendly and sensible
- Made the following classes public:  StreamPackage, WavStream, XnbStream, Mp3Stream, OggStream, WavebankStream
- Fixed an issue that causes sound streaming to not work as intended