@@ -2,9 +2,10 @@
 - Fixed a copy/paste typo which caused the `RegisterBiquadResonantFilter`, `RegisterEchoFilter` and `RegisterReverbFilter` methods in `MonoSoundManager` to mention the wrong methods
 - Updated the `StreamPackage` class:
   - Fixed a bug where looping would fail due to null reference errors
-  - Added `double GetSecondDuration(long)`, `long ModifyResetOffset(long)`, `void SetStreamPosition(double)` and `void OnLooping()`
+  - Added `double GetSecondDuration(long)`, `long ModifyResetOffset(long)`, `void SetStreamPosition(double)`, `void OnLooping()` and `void ClearAudioQueue()`
   - Added the `TimeSpan CurrentDuration` and `TimeSpan MaxDuration` properties
   - `override void ChildDispose(bool)` is now obsolete.  Use `override void Dispose(bool)` instead
+  - `override void Reset()` is now obsolete.  Use `override void Reset(bool)` instead
   - The `int ReadBytes` property was changed to `long ReadBytes`
   - The `int TotalBytes` property was changed to `long TotalBytes`
   - The `ReadBytes` and `SecondsRead` properties now expose their setters to child classes
